k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
  labels:
    app: simple-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: simple-api
